<?xml version="1.0"?>
<package format="3">
  <name>marker_localization</name>
  <version>1.4.3</version>
  <description>The marker_localization package</description>

  <author email="farhan@dfautomation.com.my">Farhan Mustar</author>
  <maintainer email="patrick@dfautomation.com">Patrick Chin</maintainer>
  <license file="COPYRIGHT">Copyright (C) 2020 DF Automation and Robotics Sdn. Bhd.</license>
  <url type="repository">https://gitlab.com/dfautomation/product/navwiz/marker_localization</url>
  <url type="bugtracker">https://gitlab.com/dfautomation/product/navwiz/marker_localization/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>tf2_eigen</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>

  <depend>agv05_msgs</depend>
  <depend>angles</depend>
  <depend>aruco</depend>
  <depend>aruco_msgs</depend>
  <depend>aruco_ros</depend>
  <depend>cv_bridge</depend>
  <depend>diagnostic_updater</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>geometry_msgs</depend>
  <depend>image_geometry</depend>
  <depend>image_transport</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>

  <exec_depend>image_transport_plugins</exec_depend>

  <test_depend>roslint</test_depend>
</package>
