<?xml version="1.0"?>
<package format="3">
  <name>agv05_audio_player</name>
  <version>3.2.0</version>
  <description>The audio player for AGV05.</description>
  <author email="nik@dfautomation.com">Nik Faisal</author>
  <maintainer email="patrick@dfautomation.com">Patrick Chin</maintainer>
  <license file="COPYRIGHT">Copyright (C) 2015 DF Automation and Robotics Sdn. Bhd.</license>
  <url type="repository">https://gitlab.com/dfautomation/product/navwiz/agv05</url>
  <url type="bugtracker">https://gitlab.com/dfautomation/product/navwiz/agv05/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>dynamic_reconfigure</depend>

  <exec_depend>agv05_msgs</exec_depend>
  <exec_depend>diagnostic_updater</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-pygame</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-pygame</exec_depend>
  <exec_depend>rospy</exec_depend>

  <test_depend>roslint</test_depend>
</package>
