<?xml version="1.0"?>
<package format="3">
  <name>agv05_joy</name>
  <version>3.2.0</version>
  <description>Manual control for Xbox360 controller.</description>
  <author email="nikfaisal05@gmail.com">nikfaisal</author>
  <maintainer email="nikfaisal05@gmail.com">nikfaisal</maintainer>
  <license file="COPYRIGHT">Copyright (C) 2016 DF Automation and Robotics Sdn. Bhd.</license>
  <url type="repository">https://gitlab.com/dfautomation/product/navwiz/agv05</url>
  <url type="bugtracker">https://gitlab.com/dfautomation/product/navwiz/agv05/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>roslint</test_depend>
</package>
