<?xml version="1.0"?>
<package format="3">
  <name>agv05_lidar</name>
  <version>3.2.0</version>
  <description>
    The lidar sensor controller for AGV05.
  </description>
  <author email="farhan@dfautomation.com">Farhan Mustar</author>
  <maintainer email="farhan@dfautomation.com">Farhan Mustar</maintainer>
  <license file="COPYRIGHT">Copyright (C) 2016 DF Automation and Robotics Sdn. Bhd.</license>
  <url type="repository">https://gitlab.com/dfautomation/product/navwiz/agv05</url>
  <url type="bugtracker">https://gitlab.com/dfautomation/product/navwiz/agv05/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>agv05_msgs</depend>
  <depend>diagnostic_updater</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>

  <build_depend>libjsoncpp-dev</build_depend>

  <exec_depend>libjsoncpp</exec_depend>

  <test_depend>roslint</test_depend>
  <test_depend>rostest</test_depend>
</package>
